# superbenchmark

./: .clang-format  .codecov.yml  .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .style.yapf  404.html  CITATION.bib  Dockerfile  MANIFEST.in  Makefile  README.md  SUPPORT.md  amd_mi300.yaml  azure-pipelines.yml  codecov.yml  default.yaml  dock_copy_dev.sh  gemm-rule.yaml  gemm.yaml  index.html  opensearch.xml  pr-review-findings.md  rule.yaml  run-gemm-get-results.sh  run-gemm.sh  run-gemms.sh  run-gpt.sh  setup.py  sitemap.xml  test.dockerfile  test3.py
.azure-pipelines/: ansible-integration-test.yml  cpu-unit-test.yml  cuda-unit-test.yml
.devcontainer/: devcontainer.json  post-create-command.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md
.github/workflows/: build-image-rocm.yml  build-image.yml  build-win.yml  codeql-analysis.yml  directx-unit-test.yml  gh-pages.yml  lint.yml  python-checks.yml
assets/css/: styles.081fa1d1.css  styles.1909a1fc.css  styles.3d1af2f1.css  styles.54928bd1.css  styles.7403f1e5.css
assets/js/: 01a85c17.1c548170.js  01a85c17.31e3ca12.js  01a85c17.61528eb8.js  01a85c17.67722a4d.js  01a85c17.7b1e8060.js  01a85c17.af6147f7.js  0b95d6d7.158390d4.js  0b95d6d7.425417b5.js  0b95d6d7.7e797ce8.js  0b95d6d7.a7e2c2d7.js  0cb915af.060ba9bf.js  0cb915af.069b0db1.js  0cb915af.14153e4a.js  0cb915af.186a8ef6.js  0cb915af.29b348a7.js  0cb915af.37f55602.js  0cb915af.3dc67a94.js  0cb915af.41dcbe6b.js  0cb915af.547637ef.js  0cb915af.5657ad95.js  0cb915af.5a07b2bb.js  0cb915af.5a408788.js  0cb915af.64d43358.js  0cb915af.6b4ac68e.js  0cb915af.77d29275.js  0cb915af.7960ca36.js  0cb915af.8284de7a.js  0cb915af.8976dd8d.js  0cb915af.8995bd82.js  0cb915af.93b10bd2.js  0cb915af.a8145567.js  0cb915af.a8a6d3dc.js  0cb915af.b1ff3f31.js  0cb915af.b7eb1937.js  0cb915af.c456e566.js  0cb915af.ce9c87c6.js  0cb915af.da61928c.js  0cb915af.e01a5bcc.js  0cb915af.e70396db.js  0cb915af.f12f83fd.js  (+664 more)
blog/: atom.xml  index.html  rss.xml
blog/tags/: index.html
dockerfile/: cuda11.1.1.dockerfile  cuda11.8.dockerfile  cuda12.1.dockerfile  cuda12.2.dockerfile  cuda12.4-arm.dockerfile  cuda12.4.dockerfile  cuda12.8.dockerfile  cuda12.9.dockerfile  cuda13.0.dockerfile  directx12.dockerfile  dtk26.04.dockerfile  dtk26.04_docker18.dockerfile  rocm4.0-pytorch1.7.0.dockerfile  rocm4.2-pytorch1.7.0.dockerfile  rocm5.0-pytorch1.9.0.dockerfile  rocm5.0.1-pytorch1.9.0.dockerfile  rocm5.0.x.dockerfile  rocm5.1.1-pytorch1.10.0.dockerfile  rocm5.1.x.dockerfile  rocm5.2.3.dockerfile  rocm5.3.x.dockerfile  rocm5.4.x.dockerfile  rocm5.5.x.dockerfile  rocm5.6.x.dockerfile  rocm5.7.x.dockerfile  rocm6.0.x.dockerfile  rocm6.2.x.dockerfile  rocm6.3.x.dockerfile  rocm6.x.dockerfile
docs/: benchmarks-design.md  cli.md  executor-design.md  introduction.md  release-process.md  superbench-config.mdx
recipe-out/: analysis.parquet  heatmap.ipynb  recipe-out.nsys-analysis
search/: index.html
superbench/: __init__.py
superbench/benchmarks/micro_benchmarks/c2c_copy_performance/: CMakeLists.txt  c2c_copy.cu
superbench/benchmarks/micro_benchmarks/cpu_copy_performance/: CMakeLists.txt  c2c_copy_performance.py  cpu_copy.cpp  cpu_copy.cu
superbench/benchmarks/micro_benchmarks/cublas_function/: CMakeLists.txt  cmd_helper.h  cublas_benchmark.cu  cublas_benchmark.h  cublas_function.h  cublas_function_helper.h  cublas_function_test.cpp  cublas_helper.cpp  cublas_helper.h  cublas_test.cpp  function.cu  function.h
superbench/benchmarks/micro_benchmarks/cublaslt_fp8_gemm/: CMakeLists.txt  cublaslt_fp8_gemm.cu  cublaslt_utils.cc  cublaslt_utils.h
superbench/benchmarks/micro_benchmarks/cublaslt_gemm/: CMakeLists.txt  concurrency.sh  cublaslt_gemm  cublaslt_gemm.cu  cublaslt_utils.cc  cublaslt_utils.h  cublastlt_gemm.cu  test.nsys-rep  test.sh
superbench/benchmarks/micro_benchmarks/cuda_decode_performance/: AppDecPerf.cpp  CMakeLists.txt  OptimizedNvDecoder.cpp  OptimizedNvDecoder.h  README.md  ThreadPoolUtils.h
superbench/benchmarks/micro_benchmarks/cuda_decode_performance/AppDecode/AppDecPerf/: AppDecPerf.cpp  CMakeLists.txt  ThreadPoolUtils.h
superbench/benchmarks/micro_benchmarks/cuda_decode_performance/NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
superbench/benchmarks/micro_benchmarks/cuda_decode_performance/Utils/: FFmpegDemuxer.h  ThreadPoolUtils.h
superbench/benchmarks/micro_benchmarks/cudnn_function/: CMakeLists.txt  convolution_backward_data.h  convolution_backward_filter.h  convolution_forward.h  cudnn_config.h  cudnn_function.h  cudnn_function_helper.h  cudnn_helper.cpp  cudnn_helper.h  cudnn_test.cpp  para_info.json
superbench/benchmarks/micro_benchmarks/cudnn_test/: CMakeLists.txt  cmd_helper.h  cudnn_benchmark.cu  cudnn_benchmark.h  cudnn_function.h  cudnn_function_helper.h  cudnn_helper.cpp  cudnn_helper.h  cudnn_test.cpp
superbench/benchmarks/micro_benchmarks/dist_inference_cpp/: CMakeLists.txt  dist_inference.cu
superbench/benchmarks/micro_benchmarks/gpu_copy_performance/: CMakeLists.txt  gpu_copy.cu
superbench/benchmarks/micro_benchmarks/gpu_sm_copy_performance/: CMakeLists.txt  gpu_sm_copy.cu
superbench/benchmarks/micro_benchmarks/gpu_stream/: CMakeLists.txt  gpu_stream.cu  gpu_stream.hpp  gpu_stream_kernels.cu  gpu_stream_kernels.hpp  gpu_stream_test.cpp  gpu_stream_utils.cpp  gpu_stream_utils.hpp
superbench/benchmarks/micro_benchmarks/ib_validation_performance/: CMakeLists.txt  ib_validation_performance.cc
superbench/benchmarks/micro_benchmarks/kernel_launch_overhead/: CMakeLists.txt  cuda_kernel_launch.cu  kernel_launch.cu  rocm_kernel_launch.cc
superbench/benchmarks/micro_benchmarks/nvbench/: CMakeLists.txt  NVBENCH_BENCHMARK_GUIDE.md  auto_throughput.cu  kernel_launch.cu  launch_bench.cu  sleep_kernel.cu
superbench/benchmarks/micro_benchmarks/rocblas_function/: CMakeLists.txt  rocblas_gemm.cc
test/: test_example.py
tests/: test_example.py
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+740 files in other folders)
